--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kennedy</title>
+    <title>Kennedy | Dev💻</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" />
 </head>
 
 <body>
     <header id="home">
-        <nav>
-            <h1>Kennedy</h1>
+        <nav class="animate__animated animate__fadeInDown">
+            <img src="/images/logo.png" alt="">
             <button class="menu-toggle" aria-label="Toggle navigation">
                 ☰
             </button>
@@ -27,15 +31,33 @@
         <!-- Modern Hero Section -->
         <section class="hero">
             <div class="hero-container">
-                <div class="hero-text">
-                    <p class="intro">Hey, I’m Kennedy</p>
-                    <h2 class="highlighted-text">A Full Stack Developer passionate about building modern web
-                        applications.</h2>
-                    <a href="My-resume.pdf" class="download-btn" download="Kennedy-resume">Download Resume</a>
+                <div class="hero-image animate__animated animate__fadeIn">
+                    <img src="/images/pic.png" alt="Kennedy" />
                 </div>
-
-                <div class="hero-image">
-                    <img src="pic.png" alt="Kennedy" />
+                <div class="hero-buttons">
+                    <a href="https://github.com/Kennedy-123" target="_blank"
+                        class="btn icon-btn animate__animated animate__fadeInLeft">
+                        <i class="fab fa-github" style="color:#333; font-size:30px;"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/kennedy-okolo-888b4728a" target="_blank"
+                        class="btn icon-btn animate__animated animate__fadeInDown">
+                        <i class="fab fa-linkedin" style="color:#0077B5; font-size:30px;"></i>
+                    </a>
+                    <a href="https://www.instagram.com/okolo_kennedy" target="_blank"
+                        class="btn icon-btn animate__animated animate__fadeInRight">
+                        <i class="fab fa-instagram" style="color:#E4405F; font-size:30px;"></i>
+                    </a>
+                </div>
+                <div class="hero-text">
+                    <p class="animate__animated animate__backInLeft">I'm Kennedy👋</p>
+                    <h2 class="animate__animated animate__flipInX">
+                        A Full Stack Developer passionate about building <span>modern web
+                            applications</span>.
+                    </h2>
+                    <div class="hero-buttons animate__animated animate__backInRight">
+                        <a href="My-resume.pdf" class="download-btn" download="Kennedy-resume">Download Resume <i
+                                class="fa-solid fa-download"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -43,8 +65,9 @@
 
     <!-- Rest of the site -->
     <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>Hi, I’m Kennedy — a results-driven Full Stack Developer with over 3 years of experience building
+        <h2 data-aos="fade-down" data-aos-duration="1000">About Me</h2>
+        <p data-aos="fade-down" data-aos-duration="1000">Hi, I’m Kennedy — a results-driven Full Stack Developer with
+            over 3 years of experience building
             high-performing, user-friendly web applications and digital solutions. I specialize in creating scalable,
             responsive, and visually engaging platforms using modern technologies like React.js, Next.js, Node.js, and
             Flask.
@@ -69,51 +92,78 @@
     </section>
 
     <section id="projects" class="section">
-        <h2>Projects</h2>
+        <h2 data-aos="fade-down" data-aos-duration="1000">Projects</h2>
         <div class="projects">
-            <div class="project">
-                <h3>JumiBot</h3>
-                <p>A price-tracking bot for Jumia that monitors product prices and sends email alerts when prices drop.
-                </p>
+            <div class="project" data-aos="flip-down" data-aos-duration="2000">
+                <img src="/images/jumibot-Screenshot.png" alt="JumiBot project screenshot" class="project-img">
+                <div class="project-info">
+                    <h3>JumiBot</h3>
+                    <p>A price-tracking bot for Jumia that monitors product prices and sends email alerts when prices
+                        drop.
+                    </p>
+                </div>
             </div>
-            <div class="project">
-                <h3>Autobot Academy</h3>
-                <p>A coding school platform built with Next.js and Clerk to help aspiring developers learn full stack
-                    development.</p>
+            <div class="project" data-aos="flip-down" data-aos-duration="3000">
+                <img src="/images/autobot-academy-screenshot.png" alt="Autobot Academy project screenshot"
+                    class="project-img">
+                <div class="project-info">
+                    <h3>Autobot Academy</h3>
+                    <p>A coding school platform built with Next.js and Clerk to help aspiring developers learn full
+                        stack
+                        development.</p>
+                </div>
             </div>
-            <div class="project">
-                <h3>content Craft</h3>
-                <p>A content creation assistant built with AI to help creators generate, organize, and optimize digital content efficiently.</p>
+            <div class="project" data-aos="flip-down" data-aos-duration="4000">
+                <img src="/images/content-craft-logo.png" alt="Content Craft project screenshot" class="project-img">
+                <div class="project-info">
+                    <h3>Content Craft</h3>
+                    <p>A content creation assistant built with AI to help creators generate, organize, and optimize
+                        digital
+                        content efficiently.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <section id="services" class="section">
-        <h2>Services</h2>
+        <h2 data-aos="fade-down" data-aos-duration="1000">Services</h2>
         <div class="services">
-            <div class="service">
-                <h3>Web Development</h3>
-                <p>Custom websites and web apps built with performance and scalability in mind.</p>
+            <div class="service" data-aos="flip-down" data-aos-duration="2000">
+                <img src="/images/web-development.jpeg" alt="Web Development" class="service-img">
+                <div class="service-info">
+                    <h3>Web Development</h3>
+                    <p>Custom websites and web apps built with performance and scalability in mind.</p>
+                </div>
             </div>
-            <div class="service">
-                <h3>Automation Bots</h3>
-                <p>Build bots to automate tasks like scraping, monitoring, or testing.</p>
+            <div class="service" data-aos="flip-down" data-aos-duration="3000">
+                <img src="/images/Automation-banner.webp" alt="Automation Bots" class="service-img">
+                <div class="service-info">
+                    <h3>Automation Bots</h3>
+                    <p>Build bots to automate tasks like scraping, monitoring, or testing.</p>
+                </div>
             </div>
-            <div class="service">
-                <h3>API Integration</h3>
-                <p>Connect your app to external APIs or create your own RESTful services.</p>
+            <div class="service" data-aos="flip-down" data-aos-duration="4000">
+                <img src="/images/mobile-Development.jpg" alt="API Integration" class="service-img">
+                <div class="service-info">
+                    <h3>App Development</h3>
+                    <p>Design and build high-quality mobile apps for Android and iOS that deliver seamless user
+                        experiences and performance.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <section id="contact" class="section">
-        <h2>Contact Me</h2>
-        <p>If you'd like to work together or have any questions, feel free to reach out!</p>
-        <p>Email: <a href="mailto:kennedyokolo222@gmail.com">kennedyokolo222@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/Kennedy-123" target="_blank">github/kennedy-123</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/kennedy-okolo-888b4728a"
-                target="_blank">linkedin.com/in/kennedy-okolo</a></p>
-        <p>Instargram: <a href="https://www.instagram.com/okolo_kennedy" target="_blank">instagram.com/okolo_kennedy</a>
+        <h2 data-aos="fade-down" data-aos-duration="1000">Contact Me</h2>
+        <p data-aos="fade-down" data-aos-duration="1000">If you'd like to work together or have any questions, feel free
+            to reach out!</p>
+        <p data-aos="fade-down" data-aos-duration="1000">Email: <a
+                href="mailto:kennedyokolo222@gmail.com">kennedyokolo222@gmail.com</a></p>
+        <p data-aos="fade-down" data-aos-duration="1000">GitHub: <a href="https://github.com/Kennedy-123"
+                target="_blank">github/kennedy-123</a></p>
+        <p data-aos="fade-down" data-aos-duration="1000">LinkedIn: <a href="https://linkedin.com/in/kennedy-okolo-888b4728a" target="_blank">linkedin.com/in/kennedy-okolo</a>
+        </p>
+        <p data-aos="fade-down" data-aos-duration="1000">Instargram: <a href="https://www.instagram.com/okolo_kennedy" target="_blank">instagram.com/okolo_kennedy</a>
         </p>
     </section>
 
@@ -121,5 +171,10 @@
         <p>&copy; 2025 Kennedy. All rights reserved.</p>
     </footer>
     <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
