--- a/index.html
+++ b/index.html
@@ -155,20 +155,25 @@
 
     <section id="contact" class="section">
         <h2 data-aos="fade-down" data-aos-duration="1000">Contact Me</h2>
-        <p data-aos="fade-down" data-aos-duration="1000">If you'd like to work together or have any questions, feel free
-            to reach out!</p>
-        <p data-aos="fade-down" data-aos-duration="1000">Email: <a
-                href="mailto:kennedyokolo222@gmail.com">kennedyokolo222@gmail.com</a></p>
-        <p data-aos="fade-down" data-aos-duration="1000">GitHub: <a href="https://github.com/Kennedy-123"
-                target="_blank">github/kennedy-123</a></p>
-        <p data-aos="fade-down" data-aos-duration="1000">LinkedIn: <a href="https://linkedin.com/in/kennedy-okolo-888b4728a" target="_blank">linkedin.com/in/kennedy-okolo</a>
-        </p>
-        <p data-aos="fade-down" data-aos-duration="1000">Instargram: <a href="https://www.instagram.com/okolo_kennedy" target="_blank">instagram.com/okolo_kennedy</a>
-        </p>
+        <div class="contact-icons" data-aos="fade-up" data-aos-duration="1200">
+            <a href="mailto:kennedyokolo222@gmail.com" title="Email" target="_blank" class="contact-icon">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://github.com/Kennedy-123" title="GitHub" target="_blank" class="contact-icon">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://linkedin.com/in/kennedy-okolo-888b4728a" title="LinkedIn" target="_blank"
+                class="contact-icon">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/okolo_kennedy" title="Instagram" target="_blank" class="contact-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Kennedy. All rights reserved.</p>
+        <p id="footer-year">&copy; <span id="current-year"></span> Kennedy. All rights reserved.</p>
     </footer>
     <script src="app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
